hphp/test/slow/readonly/mutable_collection.php.expectf
Fatal error: This expression is readonly, but the collection you're modifying is mutable, which isn't allowed. in %s on line 12
